# obs-streamlink

./: .gitattributes  .gitignore  CMakeLists.txt  FFmpegConfigure.txt  FindFFmpeg.cmake  README.md  README_zh.md  obs-source-old.h  obs-streamlink-source.cpp  obs-streamlink-source.h  obs-streamlink.cpp  obs-streamlink.h  python-streamlink.cpp  python-streamlink.h  streamlink-delayload.cpp  streamlink-source.cpp
data/locale/: en-US.ini  zh-CN.ini
installer/: dialogs.ail  dictionary.ail  installer.aip
media-playback/: NOTE-ON-PATCHING  closest-format.h  decode.cpp  decode.h  media.cpp  media.h
